--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-video": "^5.2.1",
-    "expo-av": "~13.4.1"
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
